docs/openfeature/manifests/05-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-petclinic
  namespace: open-feature-test
  labels:
    app: petclinic
    app.kubernetes.io/name: petclinic
spec:
  to:
    kind: Service
    name: spring-petclinic
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
